Deploy/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
    tier: web
  name: webapp
  namespace: concepto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      tier: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
        tier: web
    spec:
      containers:
      - env:
        - name: DbUsers__ConnectionString
          value: Server=dbsql;Database=DbUsers;User Id=sa;Password=P@ssw0rd
        image: us-west2-docker.pkg.dev/utility-descent-185119/webapp-repo/webapp:dev
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
