Deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vida-ing
  namespace: concepto
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: vida
    networking.gke.io/managed-certificates: vida-managedcert
    kubernetes.io/ingress.class: "gce" 
spec:
  defaultBackend:
    service:
      name: webapp-service
      port:
        number: 8080
